@@ -1,3 +1,8 @@
+2006-03-22  Dotan Barak  <dotanb@mellanox.co.il>
+
+	* examples/asyncwatch.c: Print asynchronous event name as well as
+	raw integer value.
+	
 2006-03-22  Roland Dreier  <rdreier@cisco.com>
 
 	* include/infiniband/verbs.h (ibv_req_notify_cq): Document
